--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <body>
     <div class="cards">
+      <nav class="card">
+        <a href="">Home</a>
+        <a href="">Images</a>
+        <a href="">Contact</a>
+      </nav>
       <div class="card">
         <img src="images/harbour1.jpg" alt="Bristol harbour" />
       </div>
@@ -20,14 +25,14 @@
         <img src="images/coloured-balloon.jpg" alt="Coloured balloon" />
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <img
           src="images/champagne-balloons.jpg"
           alt="Fortnum and Mason balloon"
         />
-      </div>
+      </div> -->
 
-      <div class="card">
+      <!-- <div class="card">
         <img src="images/funfair-balloons.jpg" alt="Funfair" />
       </div>
 
@@ -44,7 +49,7 @@
       </div>
       <div class="card">
         <img src="images/pink-balloon.jpg" alt="Balloon" />
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
